<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="6dp"
    android:background="@color/white"
    android:orientation="vertical">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/changgui"
      android:textSize="20sp"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">


        <ImageView
            android:id="@+id/pic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/yueliang" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/pic"
            android:text="@string/DayNight" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/swc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">


            <ImageView
                android:id="@+id/pic2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_cache" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_toRightOf="@id/pic2"
                android:text="@string/cache" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/swc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">


        <ImageView
            android:id="@+id/pic3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/stop_img" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/pic3"
            android:text="@string/noimg" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/swc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:textSize="20sp"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">


                <ImageView
                    android:id="@+id/pic4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_feedback" />

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_toRightOf="@id/pic4"
                    android:text="@string/feedback" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/swc4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">


                <ImageView
                    android:id="@+id/pic5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_clear" />

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_toRightOf="@id/pic5"
                    android:text="@string/backface" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="0k"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">


                <ImageView
                    android:id="@+id/pic6"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/refels" />

                <TextView
                    android:id="@+id/tv6"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_toRightOf="@id/pic6"
                    android:text="@string/refresh" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="当前版本号V1.3.3"/>
            </RelativeLayout>
        </LinearLayout>



    </android.support.v7.widget.CardView>
</LinearLayout>